@@ -1,7 +1,6 @@
 For v0.6.0
 * Replicate the first original campaign scenario
 * Character special skills for first two base characters
-* Properly handle character death
 
 For v0.7.0
 * All original base characters, including special abilities
